--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,15 @@
 server:
-  port: 8888
+  port: 8111
 
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://project1.cxg8vdlfu0la.ap-southeast-2.rds.amazonaws.com:3306/dev
-    username: admin
-    password: '00000000'
+    url: jdbc:mysql://localhost:3306/springdb
+    username: root
+    password: '0000'
+#    url: jdbc:mysql://project1.cxg8vdlfu0la.ap-southeast-2.rds.amazonaws.com:3306/dev
+#    username: admin
+#    password: '00000000'
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
@@ -28,7 +31,3 @@ spring:
   #application-oauth2
   profiles:
     include: oauth2
-
-logging:
-  level:
-    org.hibernate.SQL: debug
