--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: create  # DDL?? ??
+      ddl-auto: update  # DDL?? ??
     properties:
       hibernate:
         show_sql: true
