--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,20 @@ spring:
     #    suffix: .html
     enabled: true
 
+#    #live reload 설정 배포시 주석
+#    prefix: file:src/main/resources/templates/
+#
+#    #live reload 설정 배포시 주석
+#    devtools:
+#      livereload:
+#        enabled: true
+#      thymeleaf:
+#        cache: false
+#      restart:
+#        enabled: true
+
+
+
   #application-oauth2
   profiles:
     include: oauth2
@@ -44,3 +58,4 @@ spring:
 file:
   productImgUploadDir: C:\Users\code.aiaru\Desktop\coding\saveFiles\productImg\ # 상품이미지 경로 (절대경로로 설정해주세요)
   reviewImgUploadDir: C:\Users\code.aiaru\Desktop\coding\saveFiles\reviewImg\   # 리뷰이미지 경로 (절대경로로 설정해주세요)
+  mainSliderImgDir: \images\mainSilderImg\
