--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,17 +28,17 @@ spring:
     #    suffix: .html
     enabled: true
 
-#    #live reload 설정 배포시 주석
-#    prefix: file:src/main/resources/templates/
-#
-#    #live reload 설정 배포시 주석
-#    devtools:
-#      livereload:
-#        enabled: true
-#      thymeleaf:
-#        cache: false
-#      restart:
-#        enabled: true
+    #live reload 설정 배포시 주석
+    prefix: file:src/main/resources/templates/
+
+    #live reload 설정 배포시 주석
+    devtools:
+      livereload:
+        enabled: true
+      thymeleaf:
+        cache: false
+      restart:
+        enabled: true
 
 
 
