--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,12 +4,12 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/springdb
-#    username: root
-#    password: '1234'
-    url: jdbc:mysql://project1.cxg8vdlfu0la.ap-southeast-2.rds.amazonaws.com:3306/dev
-    username: admin
-    password: '00000000'
+    url: jdbc:mysql://localhost:3306/springdb
+    username: root
+    password: '1234'
+#    url: jdbc:mysql://project1.cxg8vdlfu0la.ap-southeast-2.rds.amazonaws.com:3306/dev
+#    username: admin
+#    password: '00000000'
   mail:
     # google smtp server 사용
     host: smtp.gmail.com
