--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -94,6 +94,6 @@ file:
 #  productImgUploadDir: C:\Users\SSONG\Desktop\Project\imgUploadTest\saveFiles\productImg\ # 상품이미지 경로 (절대경로로 설정해주세요)
 #  reviewImgUploadDir: C:\Users\SSONG\Desktop\Project\imgUploadTest\saveFiles\reviewImg\   # 리뷰이미지 경로 (절대경로로 설정해주세요)
 
-#rladpwls1843@gmail.com
-  productImgUploadDir: C:\Users\Documents\projectImg\saveFiles\productImg\ # 상품이미지 경로 (절대경로로 설정해주세요)
-  reviewImgUploadDir:  C:\Users\Documents\projectImg\saveFiles\reviewImg\  # 리뷰이미지 경로 (절대경로로 설정해주세요)
+##rladpwls1843@gmail.com
+#  productImgUploadDir: C:\Users\Documents\projectImg\saveFiles\productImg\ # 상품이미지 경로 (절대경로로 설정해주세요)
+#  reviewImgUploadDir:  C:\Users\Documents\projectImg\saveFiles\reviewImg\  # 리뷰이미지 경로 (절대경로로 설정해주세요)
