--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 server:
-  port: 8111
+  port: 8095
 
 spring:
   datasource:
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/springdb
-#    username: root
-#    password: '1234'
-    url: jdbc:mysql://project1.cxg8vdlfu0la.ap-southeast-2.rds.amazonaws.com:3306/dev
-    username: admin
-    password: '00000000'
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/springdb
+    username: root
+    password: '1234'
+#    url: jdbc:mysql://project1.cxg8vdlfu0la.ap-southeast-2.rds.amazonaws.com:3306/dev
+#    username: admin
+#    password: '00000000'
   mail:
     # google smtp server 사용
     host: smtp.gmail.com
@@ -90,8 +90,8 @@ file:
 #  reviewImgUploadDir: C:\Users\code.aiaru\Desktop\coding\saveFiles\reviewImg\   # 리뷰이미지 경로 (절대경로로 설정해주세요)
 
 #  songwc3@gmail.com
-#  productImgUploadDir: C:\Users\SSONG\Desktop\Project\imgUploadTest\saveFiles\productImg\ # 상품이미지 경로 (절대경로로 설정해주세요)
-#  reviewImgUploadDir: C:\Users\SSONG\Desktop\Project\imgUploadTest\saveFiles\reviewImg\   # 리뷰이미지 경로 (절대경로로 설정해주세요)
+  productImgUploadDir: C:\Users\Administrator\Desktop\coding\saveFiles\productImg\ # 상품이미지 경로 (절대경로로 설정해주세요)
+  reviewImgUploadDir: C:\Users\SSONG\Desktop\Project\imgUploadTest\saveFiles\reviewImg\   # 리뷰이미지 경로 (절대경로로 설정해주세요)
 
 #rladpwls1843@gmail.com
 #  productImgUploadDir: C:\Users\Documents\projectImg\saveFiles\productImg\ # 상품이미지 경로 (절대경로로 설정해주세요)
