--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -92,10 +92,10 @@ file:
 #    reviewImgUploadDir: C:\Users\Administrator\Desktop\coding\saveFiles\reviewImg\   # 리뷰이미지 경로 (절대경로로 설정해주세요)
 
   #rladpwls1843@gmail.com
-  #productImgUploadDir: C:\Users\Documents\projectImg\saveFiles\productImg\ # 상품이미지 경로 (절대경로로 설정해주세요)
-  #reviewImgUploadDir:  C:\Users\Documents\projectImg\saveFiles\reviewImg\  # 리뷰이미지 경로 (절대경로로 설정해주세요)
+  productImgUploadDir: C:\Users\Documents\projectImg\saveFiles\productImg\ # 상품이미지 경로 (절대경로로 설정해주세요)
+  reviewImgUploadDir:  C:\Users\Documents\projectImg\saveFiles\reviewImg\  # 리뷰이미지 경로 (절대경로로 설정해주세요)
 
   #server
-  /home/ubuntu/projectImg/saveFiles/productImg
-  /home/ubuntu/projectImg/saveFiles/reviewImg
+  #productImgUploadDir: /home/ubuntu/projectImg/saveFiles/productImg
+  #reviewImgUploadDir: /home/ubuntu/projectImg/saveFiles/reviewImg
 
