--- a/appspec.yml
+++ b/appspec.yml
@@ -7,7 +7,7 @@ files:
     overwrite: yes
 
 permissions:
-  - object: /home/ubuntu/app/
+  - object: /home/ubuntu/app
     owner: ubuntu
     group: ubuntu
     mode: 755
