--- a/appspec.yml
+++ b/appspec.yml
@@ -7,17 +7,20 @@ files:
     overwrite: yes
 
 permissions:
-  - object: /home/ubuntu/app
+  - object: /home/ubuntu/app/
     owner: ubuntu
     group: ubuntu
-    mode: 755
+
 
 hooks:
   AfterInstall:
-    - location: ./deploy.sh
+    - location: ./start.sh
       timeout: 60
       runas: ubuntu
-#    - location: ./.sh
+
+#hooks:
+#  AfterInstall:
+#    - location: ./stop.sh
 #      timeout: 60
 #      runas: ubuntu
 #  ApplicationStart:
