--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,9 @@ jobs:
     - name: Add permission
       run: chmod +x gradlew
 
+    - name: Build with Gradle
+      run: ./gradlew clean build
+
     # (3) Gradle build (Test 제외)
 #    - name: Build with Gradle
 #      uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
