--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 
 files:
   - source:  /
-    destination: /home/ubuntu/app
+    destination: /home/ubuntu/app/
     overwrite: yes
 
 permissions:
@@ -23,5 +23,5 @@ permissions:
 hooks:
   ApplicationStart:
     - location: ./stop.sh
-      timeout: 1000
+      timeout: 60
       runas: ubuntu
