--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
       run: ./gradlew clean build
 
     - name: Build with Gradle
-      run: ./gradlew clean build
+      run: ./gradlew build
 
     # (3) Gradle build (Test 제외)
 #    - name: Build with Gradle
