--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -90,13 +90,15 @@ file:
 #    reviewImgUploadDir: C:\Users\code.aiaru\Desktop\coding\saveFiles\reviewImg\
 
   #  songwc3@gmail.com
-#  productImgUploadDir: C:\Users\Administrator\Desktop\coding\saveFiles\productImg\ # 상품이미지 경로 (절대경로로 설정해주세요)
-#  reviewImgUploadDir: C:\Users\Administrator\Desktop\coding\saveFiles\reviewImg\   # 리뷰이미지 경로 (절대경로로 설정해주세요)
-#  profileImgUploadDir: C:\Users\Administrator\Desktop\coding\saveFiles\profileImg\ # 프로필 이미지 경로
+  productImgUploadDir: C:\Users\Administrator\Desktop\coding\saveFiles\productImg\ # 상품이미지 경로 (절대경로로 설정해주세요)
+  reviewImgUploadDir: C:\Users\Administrator\Desktop\coding\saveFiles\reviewImg\   # 리뷰이미지 경로 (절대경로로 설정해주세요)
+  profileImgUploadDir: C:\Users\Administrator\Desktop\coding\saveFiles\profileImg\ # 프로필 이미지 경로
+
   #rladpwls1843@gmail.com
   #productImgUploadDir: C:\Users\Documents\projectImg\saveFiles\productImg\ # 상품이미지 경로 (절대경로로 설정해주세요)
   #reviewImgUploadDir: C:\Users\Documents\projectImg\saveFiles\reviewImg\  # 리뷰이미지 경로 (절대경로로 설정해주세요)
 
   #server
-  productImgUploadDir: /home/ubuntu/projectImg/saveFiles/productImg/
-  reviewImgUploadDir: /home/ubuntu/projectImg/saveFiles/reviewImg/
+  #productImgUploadDir: /home/ubuntu/projectImg/saveFiles/productImg/
+  #reviewImgUploadDir: /home/ubuntu/projectImg/saveFiles/reviewImg/
+  #profileImgUploadDir: /home/ubuntu/projectImg/saveFiles/profileImg/
