--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,13 +58,13 @@ spring:
     #    prefix: file:src/main/resources/templates/
 
     #live reload 설정 배포시 주석
-    devtools:
-      livereload:
-        enabled: true
-      thymeleaf:
-        cache: false
-      restart:
-        enabled: true
+    # devtools:
+    #   livereload:
+    #     enabled: true
+    #   thymeleaf:
+    #     cache: false
+    #   restart:
+    #     enabled: true
 
 
   #application-oauth2
