--- a/appspec.yml
+++ b/appspec.yml
@@ -1,27 +1,27 @@
-version: 0.0
-os: linux
+# version: 0.0
+# os: linux
 
-files:
-  - source:  /
-    destination: /home/ubuntu/app/
-    overwrite: yes
+# files:
+#   - source:  /
+#     destination: /home/ubuntu/app/
+#     overwrite: yes
 
-permissions:
-  - object: /
-    pattern: "**"
-    owner: ubuntu
-    group: ubuntu
+# permissions:
+#   - object: /
+#     pattern: "**"
+#     owner: ubuntu
+#     group: ubuntu
 
 
 
-#hooks:
-#  AfterInstall:
-#    - location: ./start.sh
-#      timeout: 60
-#      runas: ubuntu
+# #hooks:
+# #  AfterInstall:
+# #    - location: ./start.sh
+# #      timeout: 60
+# #      runas: ubuntu
 
-hooks:
-  ApplicationStart:
-    - location: ./stop.sh
-      timeout: 60
-      runas: ubuntu
+# hooks:
+#   ApplicationStart:
+#     - location: ./stop.sh
+#       timeout: 60
+#       runas: ubuntu
